* Thu Aug 4 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.1-1)
- Faster graph.
- Refactors signals.

* Wed Aug 3 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.0-1)
- Fix severe bugs regarding SSE on mingw32. adds -mstackrealign compile option.
- Uses QOpenGLWidget for QT > 5.4 instead of the obsolete QGLWidget. Adds -lopengl32 -lglut32 for mingw32.
- Abondons nooverpaint/nodirectrender options.
- Refactors signal/slot.

* Wed Jul 27 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.16-1)
- Fix severe bugs for 4.1.14 and 15. (note: not fixed yet)

* Feb Jul 12 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.15-1)
- nmrfspectrum: Cyclic sweep mode.
- Faster transaction.
- nmrrealx: Tracks peak freq.

* Wed Jun 29 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.14-1)
- std::atomic of mingw is buggy? Back to the original one.

* Thu Jun 23 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.13-1)
- Faster transaction.
- OrientalMotor Flex: better recovery from errors.
- QD PPMS: adds controls.
- nmrspectrum: reads field values from QD PPMS.

* Thu Mar 10 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.12-1)
- QD PPMS monitor: adds user temp
- dcsource: scalar entry.

* Sun Feb 7 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.11-1)
- xwavengraph: avoids IO during dumping transaction.
- QD PPMS monitor

* Sun Sep 13 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.10-1)
- Baudrate for Modbus RTU (Flex AR/CRK) is defaulted to 57600bps.
- OMRON E5*C controller via Modbus RTU.

* Tue Aug 18 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.9-1)
- Fix chart.
- Fix for old LS340.

* Fri Jun 19 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.8-1)
- Space as delimiter for text files, again.
- Faster XXYPlot.

* Fri Jun 19 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.7-1)
- Tab as delimiter for text files.
